--- a/index.html
+++ b/index.html
@@ -2,11 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mostafa Abdelmotlb - Academic Website</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; background: #f9f9f9; color: #0f1724; }
+    h1, h2 { color: #0ea5e9; }
+    a { color: #2563eb; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    section { margin-bottom: 30px; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);}
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Academic Website</h1>
-  <p>Hello, I am Mostafa Abdelmotlb, Assistant Professor in Organizational Psychology and HRM.</p>
-  <p>This website will showcase my research, teaching, and academic contributions.</p>
+  <h1>Mostafa Abdelmotlb</h1>
+  <p>Assistant Professor in Organizational Psychology and HRM, AACSB & EQUIS accredited university, Rabat, Morocco.</p>
+  <p>PhD (2017) via a joint program between Egypt and Canada. My research focuses on leadership, ethics, and HRM systems with a special interest in servant leadership and unethical pro-leader behavior (UPLB).</p>
+
+  <section>
+    <h2>Research Interests</h2>
+    <ul>
+      <li>Servant Leadership and Ethical Dynamics</li>
+      <li>Unethical Pro-Leader Behavior (UPLB)</li>
+      <li>Organizational Behavior in MENA Contexts</li>
+      <li>HRM Systems, Employee Well-being, and Performance</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Selected Publications</h2>
+    <ul>
+      <li>Steele et al., 2023 — Servant Leadership and UPLB</li>
+      <li>Perceived Organizational Morality and Employee Ethicality, 2024</li>
+      <li>Competitive Climate, Work Addiction, and Well-Being, 2023</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:mostafa@univ.ma">mostafa@univ.ma</a></p>
+    <p>CV: <a href="REPLACE_WITH_CV_URL" target="_blank">Download PDF</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank">Profile</a></p>
+    <p>Google Scholar: <a href="https://scholar.google.com/citations?user=YOURID" target="_blank">Profile</a></p>
+  </section>
 </body>
 </html>
