--- a/index.html
+++ b/index.html
@@ -5,34 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mostafa Abdelmotlb - Academic Website</title>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; background: #f9f9f9; color: #0f1724; }
-    h1, h2 { color: #0ea5e9; }
-    a { color: #2563eb; text-decoration: none; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; padding: 20px; background: #f0f4f8; color: #1e293b; }
+    h1 { color: #0d9488; font-size: 2.5em; margin-bottom: 0; }
+    h2 { color: #2563eb; margin-top: 30px; border-bottom: 2px solid #2563eb; display: inline-block; padding-bottom: 5px; }
+    p { font-size: 1.1em; margin: 10px 0 20px; }
+    ul { list-style-type: square; padding-left: 20px; }
+    a { color: #0ea5e9; text-decoration: none; }
     a:hover { text-decoration: underline; }
-    section { margin-bottom: 30px; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);}
+    section { margin-bottom: 30px; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); }
   </style>
 </head>
 <body>
   <h1>Mostafa Abdelmotlb</h1>
-  <p>Assistant Professor in Organizational Psychology and HRM, AACSB & EQUIS accredited university, Rabat, Morocco.</p>
-  <p>PhD (2017) via a joint program between Egypt and Canada. My research focuses on leadership, ethics, and HRM systems with a special interest in servant leadership and unethical pro-leader behavior (UPLB).</p>
+  <p>Assistant Professor in Organizational and Social Psychology, HRM Department, Rabat Business School, Morocco. AACSB accredited.</p>
 
   <section>
     <h2>Research Interests</h2>
     <ul>
-      <li>Servant Leadership and Ethical Dynamics</li>
-      <li>Unethical Pro-Leader Behavior (UPLB)</li>
-      <li>Organizational Behavior in MENA Contexts</li>
-      <li>HRM Systems, Employee Well-being, and Performance</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Selected Publications</h2>
-    <ul>
-      <li>Steele et al., 2023 — Servant Leadership and UPLB</li>
-      <li>Perceived Organizational Morality and Employee Ethicality, 2024</li>
-      <li>Competitive Climate, Work Addiction, and Well-Being, 2023</li>
+      <li>Corporate Social Responsibility (CSR)</li>
+      <li>Individual Attitudes and Behaviors</li>
+      <li>Ethical Outcomes in Organizations</li>
     </ul>
   </section>
 
