--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mostafa Abdelmotlb - Academic Website</title>
-  <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; padding: 20px; background: #f0f4f8; color: #1e293b; }
-    h1 { color: #0d9488; font-size: 2.5em; margin-bottom: 0; }
-    h2 { color: #2563eb; margin-top: 30px; border-bottom: 2px solid #2563eb; display: inline-block; padding-bottom: 5px; }
-    p { font-size: 1.1em; margin: 10px 0 20px; }
-    ul { list-style-type: square; padding-left: 20px; }
-    a { color: #0ea5e9; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    section { margin-bottom: 30px; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); }
-  </style>
-</head>
 <body>
-  <h1>Mostafa Abdelmotlb</h1>
-  <p>Assistant Professor in Organizational and Social Psychology, HRM Department, Rabat Business School, Morocco. AACSB accredited.</p>
+  <!-- Profile Photo -->
+  <img src="profile.jpg" alt="Mostafa Abdelmotaleb" style="width:180px; border-radius:50%; margin-bottom:15px; display:block; margin-left:auto; margin-right:auto;">
 
+  <!-- Main Heading -->
+  <h1 style="text-align:center;">Mostafa Abdelmotaleb</h1>
+
+  <!-- Introduction -->
+  <p style="text-align:center;">Assistant Professor in Organizational and Social Psychology, HRM Department, Rabat Business School, Morocco. AACSB accredited.</p>
+
+  <!-- Research Interests -->
   <section>
     <h2>Research Interests</h2>
     <ul>
@@ -28,6 +18,7 @@
     </ul>
   </section>
 
+  <!-- Contact -->
   <section>
     <h2>Contact</h2>
     <p>Email: <a href="mailto:mostafa@univ.ma">mostafa@univ.ma</a></p>
@@ -36,4 +27,3 @@
     <p>Google Scholar: <a href="https://scholar.google.com/citations?user=YOURID" target="_blank">Profile</a></p>
   </section>
 </body>
-</html>
