Add navigation bar include

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body>
+<body>{% include navbar.html %}
   <!-- Profile Photo -->
   <img src="profile.jpg" alt="Mostafa Abdelmotaleb" style="width:180px; border-radius:50%; margin-bottom:15px; display:block; margin-left:auto; margin-right:auto;">
 
