--- a/relative-ocb.html
+++ b/relative-ocb.html
@@ -1,25 +1,21 @@
 <section class="essay">
+  <!-- Image at the top of the essay -->
   <img src="images/workplace-team.jpg" alt="Team working together in a workplace" class="essay-image">
-  <p>
-    Your essay content goes here. This could be the introduction or first paragraph.
-    Adding the image at the top sets a professional and engaging tone for readers.
-  </p>
-</section>
 
-<style>
-.essay-image {
-  max-width: 100%;           /* makes it responsive */
-  height: auto;              /* keeps aspect ratio */
-  display: block;            
-  margin: 0 auto 20px;       /* centers image and adds space below */
-  border-radius: 8px;        /* soft rounded corners */
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* subtle shadow */
-}
-.essay {
-  max-width: 800px;          /* optional: keeps text readable */
-  margin: 0 auto;            /* centers essay on page */
-  padding: 20px;
-  line-height: 1.6;
-  font-family: Arial, sans-serif;
-}
-</style>
+  <!-- Website-friendly essay with subheadings -->
+  <h2>Introduction</h2>
+  <p>
+    Organizational citizenship behaviors (OCBs) are widely recognized as positive actions employees take beyond their formal job responsibilities, often benefiting the organization and their supervisors. Recent research has introduced a new concept called <strong>relative organizational citizenship behaviors toward the supervisor</strong> (ROCBS), which refers to a focal follower’s supportive behaviors relative to their peers toward the supervisor. This concept allows researchers and practitioners to examine how a follower’s standing among colleagues in terms of support can influence supervisor behavior, including potentially unethical responses.
+  </p>
+
+  <h2>Study Overview</h2>
+  <p>
+    The study explored how ROCBS affects supervisors’ unethical favoritism behavior (UFB)—actions taken to benefit certain employees at the expense of ethical norms. The authors conducted two complementary studies: a controlled experiment and a multi-rater field study. This combination provided both precision and real-world applicability, capturing how supervisors respond to employees’ supportive actions in different contexts.
+  </p>
+
+  <h2>Key Findings</h2>
+  <p>
+    Employees with higher ROCBS were perceived as more supportive by their supervisors. This perception increased the likelihood that supervisors would engage in unethical favoritism—but only when supervisors experienced high competence uncertainty. Confident supervisors, in contrast, were less influenced by perceptions of support. This finding underscores the moderating role of supervisor competence uncertainty in shaping the ethical consequences of relative employee support.
+  </p>
+  <p>
+    The research contributes to theory in three ways. First, it shifts from a leader-centric perspective to a follower-centered lens, showing how employee behaviors can influence supervisors’ ethical decisions. Second, it highlights a potential “dark side” of OCBs: even well-intentioned supportive behaviors can lead to unintended negative consequences under specific conditions. Third, by introducing ROCBS,
