--- a/relative-ocb.html
+++ b/relative-ocb.html
@@ -1,11 +1,13 @@
 <section class="essay">
-  <!-- Image at the top of the essay -->
-  <img src="images/workplace-team.jpg" alt="Team working together in a workplace" class="essay-image">
+  <!-- Top image -->
+  <img src="https://raw.githubusercontent.com/MoustafaAbdelmotaleb/my-academic-website/main/_includes/Diverse%20Team%20Collaboration%20in%20Modern%20Office.png" 
+       alt="Team working together in a workplace" 
+       class="essay-image">
 
-  <!-- Website-friendly essay with subheadings and visual design -->
+  <!-- Essay content -->
   <h2 class="essay-heading">Introduction</h2>
   <p>
-    Organizational citizenship behaviors (OCBs) are widely recognized as positive actions employees take beyond their formal job responsibilities, often benefiting the organization and their supervisors. Recent research has introduced a new concept called <strong>relative organizational citizenship behaviors toward the supervisor</strong> (ROCBS), which refers to a focal follower’s supportive behaviors relative to their peers toward the supervisor. This concept allows researchers and practitioners to examine how a follower’s standing among colleagues in terms of support can influence supervisor behavior, including potentially unethical responses.
+    Organizational citizenship behaviors (OCBs) are widely recognized as positive actions employees take beyond their formal job responsibilities. Recent research has introduced a new concept called <strong>relative organizational citizenship behaviors toward the supervisor</strong> (ROCBS), which refers to a focal follower’s supportive behaviors relative to their peers toward the supervisor. This allows organizations to examine how a follower’s standing among colleagues in terms of support can influence supervisor behavior, including potentially unethical responses.
   </p>
 
   <h2 class="essay-heading">Study Overview</h2>
@@ -15,83 +17,7 @@
 
   <h2 class="essay-heading">Key Findings</h2>
   <p>
-    Employees with higher ROCBS were perceived as more supportive by their supervisors. This perception increased the likelihood that supervisors would engage in unethical favoritism—but only when supervisors experienced high competence uncertainty. Confident supervisors, in contrast, were less influenced by perceptions of support. This finding underscores the moderating role of supervisor competence uncertainty in shaping the ethical consequences of relative employee support.
+    Employees with higher ROCBS were perceived as more supportive by their supervisors. This perception increased the likelihood that supervisors would engage in unethical favoritism—but only when supervisors experienced high competence uncertainty. Confident supervisors, in contrast, were less influenced by perceptions of support. This highlights the moderating role of supervisor competence uncertainty in shaping the ethical consequences of relative employee support.
   </p>
   <p>
-    The research contributes to theory in three ways. First, it shifts from a leader-centric perspective to a follower-centered lens, showing how employee behaviors can influence supervisors’ ethical decisions. Second, it highlights a potential “dark side” of OCBs: even well-intentioned supportive behaviors can lead to unintended negative consequences under specific conditions. Third, by introducing ROCBS, the study provides a more nuanced measure of relative support among peers, allowing for better understanding of workplace dynamics.
-  </p>
-
-  <h2 class="essay-heading">Practical Implications for Organizations</h2>
-  <p>
-    For organizations, these findings offer several lessons. Supervisor training should emphasize ethical decision-making and raise awareness of how perceptions of support or favoritism can bias judgment. Policies and monitoring systems should be in place to prevent employee support from inadvertently leading to unethical favoritism.
-  </p>
-  <p>
-    Enhancing managerial competence is also crucial. Supervisors with higher confidence are less likely to let perceptions of support influence unethical behavior. Coaching programs and professional development initiatives that strengthen managerial skills and self-efficacy can mitigate the risks associated with favoritism-driven misconduct.
-  </p>
-  <p>
-    At the team level, promoting fairness and transparency in performance evaluation and recognition is key. By systematically acknowledging contributions, organizations can encourage positive workplace behaviors while minimizing ethical conflicts. This approach ensures that supportive behaviors are recognized appropriately without creating opportunities for favoritism.
-  </p>
-
-  <h2 class="essay-heading">Conclusion</h2>
-  <p>
-    In summary, the study highlights the importance of considering how employees’ relative supportive actions toward supervisors—ROCBS—can shape managerial behavior. Understanding the interaction between follower support and supervisor competence uncertainty allows organizations to design policies, training programs, and management practices that harness the benefits of citizenship behaviors while maintaining ethical standards. By doing so, companies protect organizational integrity and employee trust, ensuring that positive contributions lead to intended outcomes rather than unintended ethical risks.
-  </p>
-</section>
-
-<style>
-/* Essay container */
-.essay {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 30px 40px;
-  line-height: 1.7;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #fdfdfd;
-  border-radius: 12px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-  color: #333;
-}
-
-/* Image styling */
-.essay-image {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto 30px;
-  border-radius: 12px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  transition: transform 0.3s ease;
-}
-.essay-image:hover {
-  transform: scale(1.03);
-}
-
-/* Headings styling */
-.essay-heading {
-  font-size: 1.8rem;
-  color: #1f4e79; /* deep blue accent */
-  margin-top: 35px;
-  margin-bottom: 15px;
-  border-left: 5px solid #f39c12; /* orange accent bar */
-  padding-left: 12px;
-}
-
-/* Paragraphs */
-.essay p {
-  font-size: 1.05rem;
-  margin-bottom: 18px;
-  color: #444;
-}
-
-/* Highlight strong text */
-.essay strong {
-  color: #e67e22; /* orange accent */
-}
-
-/* Optional: Add subtle hover effect for paragraphs */
-.essay p:hover {
-  background: rgba(243, 156, 18, 0.05);
-  padding-left: 6px;
-  transition: 0.3s;
-}
-</style>
+    The research contributes to theory in three ways. First, it sh
